# user-ticket-accompl-tracker

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
accomplishment-tracker-service/: Dockerfile  index.js  package-lock.json  package.json
accomplishment-tracker-service/controller/: accomplishment-form-controller.js  accomplishment-logs-controller.js  time-in-out-controller.js  time-log-controller.js
accomplishment-tracker-service/dal/: accomplishment-logs-dal.js  time-logs-dal.js
accomplishment-tracker-service/error/: time-log-cache-error.js
accomplishment-tracker-service/middleware/: jwt-middleware.js
accomplishment-tracker-service/routes/: accomplishment-logs-route.js  time-in-out-route.js  time-log-route.js
accomplishment-tracker-service/util/: jwt-util.js  mongo-util.js  redis-util.js  time-log-cache-utility.js
app/: main.py
app/client/: arkline_ai_urgency.py
app/client/doc_vectorstore/: chroma.sqlite3
app/client/prompts/: arkline_urgency_prompts.py
app/routers/: rtr_chat.py  rtr_urgency.py
app/utils/: util.py
chatbot-service/: .gitignore  main.py
chatbot-service/app/: main.py
chatbot-service/app/client/: arkline_ai_chat.py  arkline_ai_urgency.py
chatbot-service/app/utils/: util.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/context/: AccomplishmentLogContext.jsx
src/: App.jsx  ModalEmail.jsx  ModalHistory.jsx  ModalSubmittedList.jsx  SubmitAlert.jsx  index.css  main.jsx
src/components/page/: Login.jsx  (+3 more)
src/styles/: index.css
(+27 files in other folders)
